# opengl-test

./: .gitmodules  CMakeLists.txt  README.md  cirkelboog.py  lambert.html
src/Headers/: arc.hpp  bg.hpp  cube.hpp
src/Shaders/: default.frag  default.vert
src/Sources/: arc.cpp  bg.cpp  cube.cpp  main.cpp
